--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODN_ATLAS_URI="mongodb+srv://proyecto-5:PROYECTO-5@cluster0.vdkvman.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+MONGODB_ATLAS_CONNECTION = "mongodb+srv://andrespeco0987:andresfelip0987@cluster0.e7jb5mv.mongodb.net/GamesTest?retryWrites=true&w=majority&appName=Cluster0"
